Kubernetes/08/ingress/ingress.yml
---
kind: Ingress
apiVersion: networking.k8s.io/v1       
metadata:
  name: homepay-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: home-svc
              port:
                number: 80
        
        - path: /pay
          pathType: Prefix
          backend:
            service:
              name: pay-svc
              port:
                number: 80
